--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -24,7 +24,7 @@
   }
 }
 .main {
-  width: 100vw;
+  width: calc(100vw - 120px);
   height: calc(100vh - 80px);
   // display: flex;
   padding: 0 60px;
