--- a/app/views/lists/_header.html.haml
+++ b/app/views/lists/_header.html.haml
@@ -8,8 +8,16 @@
           = link_to edit_user_path(current_user) do
             変更
         %li.list__category
-          = link_to new_user_registration_path do
-            新規登録
+          = link_to new_group_path do
+            グループ
+        %li.list__category
+          = link_to edit_group_path(current_user) do
+            グループ変更
+      - current_user.groups.each do |group|
+        .group
+          = link_to '#' do
+            .group__name
+              = group.name
         -# -if user_signed_in?
         -#   %li.list__mypage
         -#     = link_to "マイページ",user_path(current_user.id), class:"btn",id: "hover-c"
